@@ -1,3 +1,8 @@
+2003-04-04  Ettore Perazzoli  <ettore@ximian.com>
+
+	* gui/dialogs/alarm-options.c (alarm_to_dialog): Make the file
+	entry modal.  [#40792]
+
 2003-04-04  JP Rosevear  <jpr@ximian.com>
 
 	* gui/dialogs/alarm-options.c (alarm_to_dalarm_widgets):
